<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="intro">My Nanodegree Apps!</string>
    <string name="btn_spotify">Spotify Streamer</string>
    <string name="btn_scores">Scores App</string>
    <string name="btn_library">Library App</string>
    <string name="btn_build_it_bigger">Build it Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone : My own App</string>
</resources>
